# Helpdesk

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  ticket.h  ticketdialog.cpp  ticketdialog.h  ticketdialog.ui  ticketrepository.cpp  ticketrepository.h  tickettablemodel.cpp  tickettablemodel.h
